# web3-sentinel

./: .gitignore  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUCCESS.md  LICENSE  README.md  foundry.toml  pyproject.toml
contracts/src/: VulnerableVault.sol
contracts/test/: Exploit_1.t.sol  Exploit_2.t.sol  Exploit_3.t.sol  Exploit_4.t.sol  Exploit_hypothesis-1.t.sol  Exploit_hypothesis-2.t.sol  Exploit_hypothesis-3.t.sol  VulnerableVault.t.sol
data/hacks/: README.md  dao_hack_2016.md
data/vector_db/: README.md
docs/: BLOCKCHAIN_ACCESS.md  ONCHAIN_ENRICHMENT.md
examples/: advanced_features.py  audit_with_onchain.py  blockchain_access.py
src/sentinela/: __init__.py  cli.py
src/sentinela/agents/: __init__.py  auditor.py  base.py  explorer.py  prover.py  red_teamer.py
src/sentinela/core/: __init__.py  config.py  orchestrator.py  state.py
src/sentinela/integrations/: __init__.py  cache.py  cross_chain.py  explorer.py  foundry.py  indexer.py  monitor.py  rpc.py  slither.py
src/sentinela/rag/: __init__.py  loader.py  retriever.py
tests/: README.md  conftest.py  test_auditor_enrichment.py  test_core.py  test_integration.py  test_integrations.py
